apps/fallbacksite/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fallback
  namespace: fallbacksite
  annotations:
    cert-manager.io/cluster-issuer: homelab-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kubesoar.com
        - "*.kubesoar.com"
      secretName: fallbacksite-tls
  rules:
    - host: kubesoar.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fallback-nginx
                port:
                  number: 80
    - host: "*.kubesoar.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fallback-nginx
                port:
                  number: 80
